<resources>
    <string name="app_name">Healthy</string>
    <string name="user_id">User Id</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">Register New Account</string>
    <string name="btn_new_account">REGISTER NEW ACCOUNT</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="btn_cal">CALCULATE</string>

    <string name="user">admin</string>
    <string name="pass">admin</string>

</resources>
