<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="50dp">

        <TextView
            android:drawableLeft="@drawable/ic_action_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text= ""
            android:layout_gravity="left"
            android:textColor="@color/colorPrimary"
            android:id="@+id/bmi_backBtn"
            android:layout_marginTop="15dp"
            android:clickable="true"
            android:onClick="onClick"
            android:paddingBottom="40dp"/>

        <EditText
        android:hint="@string/height"
        android:drawableLeft="@drawable/ic_height"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bmi_height" />

    <EditText
        android:hint="@string/weight"
        android:drawableLeft="@drawable/ic_height"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bmi_weight" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_cal"
        android:id="@+id/bmi_calculate_btn"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Your BMI"
            android:gravity="center"
            android:paddingTop="50dp"
            android:textSize="30dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="0"
            android:gravity="center"
            android:textSize="30dp"
            android:id="@+id/bmi_bmishow"      />

    </LinearLayout>
</ScrollView>
</LinearLayout>