<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="35dp">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/kfc"
        android:id="@+id/imageView2"
        android:layout_weight="0.28"
        android:layout_gravity="center"
        />

    <EditText
        android:layout_gravity="center"
        android:drawableLeft="@drawable/ic_action_name"
        android:layout_marginTop="15dp"
        android:hint="Email"
        android:id="@+id/login_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />


    <EditText
        android:drawableLeft="@drawable/ic_password"
        android:layout_marginTop="15dp"
        android:hint="@string/password"
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:inputType="textPassword"
        />

    <Button
        android:text="@string/btn_login"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_login_btn"
        android:layout_weight="0.05" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text= "@string/btn_register"
        android:layout_gravity="right"
        android:textColor="@color/colorPrimary"
        android:id="@+id/register_textview"
        android:layout_marginTop="15dp"
        android:clickable="true"
        android:onClick="onClick"/>

    </LinearLayout>



    </ScrollView>
</LinearLayout>